<?xml version="1.0" encoding="utf-8"?>
<!-- layout for data binding -->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <!-- databinding shared viewModel -->
    <data>
        <variable
            name="viewModel"
            type="com.sventripikal.nasa_asteroid_radar.models.ApplicationViewModel" />
    </data>


    <!-- linear layout used to simply stack views vertically -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical"
        tools:context=".screens.MainScreen">

        <!-- ImageView for displaying asteroid photo -->
        <ImageView
            android:id="@+id/asteroidImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_250dp"
            android:scaleType="centerCrop"
            app:setAsteroidImage="@{viewModel.detailsScreenAsteroid}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@drawable/ic_launcher_background"
            tools:ignore="ContentDescription" />


        <!-- MaterialCardView for containing/stacking each asteroid detail -->
        <com.google.android.material.card.MaterialCardView
            style="@style/detailItemCardStyle"
            android:id="@+id/closeApproachDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/asteroidImage">

            <!-- constraint layout -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- textview for displaying card header -->
                <TextView
                    style="@style/detailItemHeader"
                    android:id="@+id/closeApproachDateHeader"
                    android:text="@string/close_approach_date"
                    app:layout_constraintBottom_toTopOf="@+id/asteroidCloseApproachDate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread" />

                <!-- textview for displaying card supporting text -->
                <TextView
                    style="@style/detailItemSupportText"
                    android:id="@+id/asteroidCloseApproachDate"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/closeApproachDateHeader"
                    app:setCloseApproachDate="@{viewModel.detailsScreenAsteroid}"
                    tools:text="2023-08-03" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <!-- MaterialCardView for containing/stacking each asteroid detail -->
        <com.google.android.material.card.MaterialCardView
            style="@style/detailItemCardStyle"
            android:id="@+id/absoluteMagitude"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/closeApproachDate">

            <!-- constraint layout -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- textview for displaying card header -->
                <TextView
                    style="@style/detailItemHeader"
                    android:id="@+id/absoluteMagnitudeHeader"
                    android:text="@string/absolute_magnitude"
                    app:layout_constraintBottom_toTopOf="@+id/asteroidAbsoluteMagnitude"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread" />

                <!-- textview for displaying card supporting text -->
                <TextView
                    style="@style/detailItemSupportText"
                    android:id="@id/asteroidAbsoluteMagnitude"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/absoluteMagnitudeHeader"
                    app:setAbsoluteMagnitude="@{viewModel.detailsScreenAsteroid}"
                    tools:text="21.300000 au" />

                <!-- ImageView for displaying help icon -->
                <ImageView
                    android:id="@+id/absoluteMagnitudeHelpIcon"
                    android:layout_width="@dimen/width_50dp"
                    android:layout_height="@dimen/height_50dp"
                    android:layout_marginTop="@dimen/margin_10dp"
                    android:layout_marginEnd="35dp"
                    android:layout_marginBottom="@dimen/margin_10dp"
                    android:clickable="true"
                    android:contentDescription="@string/help_icon"
                    android:focusable="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/round_help_24"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <!-- MaterialCardView for containing/stacking each asteroid detail -->
        <com.google.android.material.card.MaterialCardView
            style="@style/detailItemCardStyle"
            android:id="@+id/estimatedDiameter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/absoluteMagitude">

            <!-- constraint layout -->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- textview for displaying card header -->
                <TextView
                    style="@style/detailItemHeader"
                    android:id="@+id/estimatedDiameterHeader"
                    android:text="@string/estimated_diameter"
                    app:layout_constraintBottom_toTopOf="@+id/asteroidEstimatedDiameter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread" />

                <!-- textview for displaying card supporting text -->
                <TextView
                    style="@style/detailItemSupportText"
                    android:id="@+id/asteroidEstimatedDiameter"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/estimatedDiameterHeader"
                    app:setEstimatedDiameter="@{viewModel.detailsScreenAsteroid}"
                    tools:text="0.326618 km" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <!-- MaterialCardView for containing/stacking each asteroid detail -->
        <com.google.android.material.card.MaterialCardView
            style="@style/detailItemCardStyle"
            android:id="@+id/relativeVelocity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/estimatedDiameter">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- textview for displaying card header -->
                <TextView
                    style="@style/detailItemHeader"
                    android:id="@+id/relativeVelocityHeader"
                    android:text="@string/relative_velocity"
                    app:layout_constraintBottom_toTopOf="@+id/asteroidRelativeVelocity"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread" />

                <!-- textview for displaying card supporting text -->
                <TextView
                    style="@style/detailItemSupportText"
                    android:id="@+id/asteroidRelativeVelocity"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/relativeVelocityHeader"
                    app:setRelativeVelocity="@{viewModel.detailsScreenAsteroid}"
                    tools:text="14.462685 km/s" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


        <!-- MaterialCardView for containing/stacking each asteroid detail -->
        <com.google.android.material.card.MaterialCardView
            style="@style/detailItemCardStyle"
            android:id="@+id/distanceFromEarth"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relativeVelocity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <!-- textview for displaying card header -->
                <TextView
                    style="@style/detailItemHeader"
                    android:id="@+id/distanceFromEarthHeader"
                    android:text="@string/distance_from_earth"
                    app:layout_constraintBottom_toTopOf="@+id/asteroidDistanceFromEarth"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="spread" />

                <!-- textview for displaying card supporting text -->
                <TextView
                    style="@style/detailItemSupportText"
                    android:id="@+id/asteroidDistanceFromEarth"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/distanceFromEarthHeader"
                    app:setDistanceFromEarth="@{viewModel.detailsScreenAsteroid}"
                    tools:text="0.197820 au"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
</layout>